<resources>
    <string name="app_name">10_Home_ViewLayout</string>
    <string name="enter_mail">E-mail</string>
    <string name="enter_password">Password</string>
    <string name="Accept_agreement">Accept agreement</string>
    <string name="log_in">Log in</string>
    <string name="enter_e_mail_and_password">Enter E-mail and password</string>
    <string name="loader_operation">Log in success</string>
</resources>